tests/programs/a1/local/invalid/ThisSuperExample.java
public class ThisSuperExample {
    public ThisSuperExample() {
        this();  // Invalid explicit this() call in a constructor
    }
}
